--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,15 @@
   flex-wrap: wrap;
 
 }
+.container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .contenedor-calculadora{
   width: 400px;
-  height: 600px;
   padding:14px;
   background-color: #99c9ff;
   border-radius: 20px;
